tests/errors/generic_type_invariant_mismatch.dang
# Invariant mismatch: Box[Int!] cannot be initialized from Box(String!)

type Box[a] {
  pub value: a
}

pub b: Box[String!]! = Box(1)
